# aiowx

./: .gga  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE-NOTES.md  engram-export.json  notes.txt  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  publish.yml  test.yml
docs/: RELEASE-NOTES.md
openspec/: config.yaml
openspec/changes/archive/: python-3.14-native-compat-archive.md
openspec/changes/archive/2026-06-13-python-3.14-native-compat/: design.md  exploration.md  proposal.md  state.yaml  tasks.md  verify-phase1.md
openspec/changes/archive/2026-06-13-python-3.14-native-compat/specs/foundation/: spec.md
openspec/changes/archive/2026-06-20-fix-show-modal-thread-safety/: apply-progress.md  archive-report.md  design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-06-20-fix-show-modal-thread-safety/specs/foundation/: spec.md
openspec/changes/archive/2026-06-20-on-task-completed-leak/: design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-06-20-on-task-completed-leak/specs/foundation/: spec.md
openspec/changes/archive/2026-06-20-rediseno-agents-md/: apply-progress.md  archive-report.md  design.md  explore.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-06-20-rename-to-aiowx/: archive-report.md  design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-06-21-refactor-core/: archive-report.md  design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-06-21-refactor-core/specs/refactor-migration/: spec.md
openspec/changes/rediseno-agents-md/: apply-progress.md
openspec/specs/code-review-rules/: spec.md
openspec/specs/foundation/: spec.md
src/aiowx/: __init__.py  _app.py  _core.py  _dialog.py
src/examples/: demo_app.py  dialog.py  more_dialogs.py  server.py  simple.py  slider_demo.py
test/: poc_windows_patch_iocp.py  test_perfs.py
tests/: __init__.py  conftest.py  test_agents_md.py  test_app.py  test_bind.py  test_coroutine.py  test_dialogs.py  test_pyproject_ruff.py
