[project]
name = "aiowx"
version = "0.2.1"
description = "Async I/O bridge for wxPython — run asyncio coroutines with wx GUI"
readme = "README.md"
authors = [
    { name = "Rowell Urbaez Reyes", email = "167712855+Row0902@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = ["wxpython>=4.2.5"]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["src/examples/*"]

[tool.ruff]
target-version = "py314"
exclude = [
    "test",         # legacy perf tests / PoC (archived in Phase 3)
    "src/examples", # example scripts requiring wxPython display
]

[tool.ruff.lint]
extend-select = [
    "S",    # flake8-bandit — security linting
    "UP",   # pyupgrade — modern Python syntax
    "B",    # flake8-bugbear — likely bugs and suspicious patterns
    "SIM",  # flake8-simplify — simplify verbose or redundant constructs
    "A",    # flake8-builtins — avoid shadowing Python builtins
    "RUF",  # Ruff-specific rules
    "PL",   # Pylint — complexity, naming, and design
    "D",    # pydocstyle — docstring conventions
    "FBT",  # flake8-boolean-trap — boolean positional args
    "TCH",  # flake8-type-checking — type-only imports
    "PERF", # Perflint — performance anti-patterns
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-statements = 40

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",    # assert is the pytest way
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",    # test names are descriptive
    "D200",
    "D212",    # existing multiline module docstrings
    "RUF002",  # en dash in existing module docstrings
    "PLC0415", # tests import inside fixtures to avoid wx side effects
    "PLR2004", # literal values are idiomatic in tests
    "FBT001",
    "FBT002",
    "FBT003",  # pytest fixtures/assertions use booleans
    "RUF043",  # existing tests use plain string match patterns
    "TC003",   # type hints in test stubs need runtime import
]
"src/aiowx/_app.py" = [
    "A001",
    "A002",    # wx API convention uses `id` parameter
    "FBT001",
    "FBT002",  # warn_on_cancel_callback is part of stable public API
    "FBT003",  # wx API calls use positional boolean flags by convention
    "PLR0913", # wx event bindings mirror wx's multi-parameter signatures
    "B010",    # dynamic `obj` attribute on asyncio.Task avoids type-checker false positive (remove when _TrackedTask fully replaces setattr)
]
"src/aiowx/_dialog.py" = [
    "FBT001",
    "FBT002", # wx dialog API uses boolean flags by convention
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]
